# SmartGarden1.0

./: README.md  Test1  Untitled-1.ipynb  concurso.py  first-attemp
Clasification model/: ModeloPreEntrenado.ipynb  conWebcam.py  main.py  reTraining.ipynb  requirements.txt
Transfer Learning/: gitkeep
smartg/install/: local_setup.sh  setup.sh
smartg/install/smart_g/lib/smart_g/: VideoInput  detector  image_filterA  image_filterB  image_filterSubs  image_publisher  image_subscriber  leaf_define  obj_Tracker  outputNode
smartg/install/smart_g/share/smart_g/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
smartg/install/smart_g/share/smart_g/launch/: inicio.launch.py
smartg/log/: latest_build
smartg/src/: CMakeLists.txt  setup.cfg  setup.py
smartg/src/smart_g/: VideoInputA.py  detectorA.py  image_colorB.py  image_publisher.py  image_subscriber.py  leaf_define.py  outputNode.py  tracker.py
tracking model/: codigoPrueba.py
tracking model/bestweights/best/: data.pkl
tracking model/bestweights/best/.data/: serialization_id
tracking model/bestweights/best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+259 more)
